Fix the alignement when wrong nb of hexa per line

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,8 +14,8 @@ $hexStrokeHalfWeight: 1.5px;
     }
     //
     &:hover {
-        // transform: scale(1.2);
-        z-index: 1;
+        // transform: scale(2.5);
+        // z-index: 1;
     }
 }
 
@@ -31,18 +31,20 @@ $sqrt3: 1.73205;
 
 .hexaContainer {
     margin-bottom: $hexWidth * $sqrt3;
-    &:nth-child(2n) {
-        transform: translate(0, $hexWidth * $sqrt3);
-    }
     &:nth-child(2n+1) {
-
+        transform: translate(0, $hexWidth * $sqrt3);
     }
 }
 // Position the two sets of hexagons for the tiling
-.hexaSet1{
+.hexaSet1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+.pairOfHexagons {
+    display: flex;
+    flex-direction: row;
+    // flex-wrap: wrap;
 }
 // Draw the hexagonal shape
 $hexagonalPath: polygon(
